2.0.0-dev (Next Release)

  Dropped support for Python 2.6.

1.0.0 (2-Feb-2014)

  Dropped support for Python versions before 2.6.

  Added support for Python 3.2 and 3.3.

0.4 (27-Aug-2011)

  Added a new eventlistener result handler that receives an "STDIN:"
  command in the result and sends any following bytes to the
  STDIN of the process associated with the event.  In supervisord.conf:

  [eventlistener:process_comm_listener]
  events=PROCESS_COMMUNICATION_STDOUT
  result_handler=supervisor_twiddler.resulthandler:stdin_write_handler
  ...

0.3 (14-May-2010)

  Supervisor 3.0a10 or later is now required.

  We no longer bundle ez_setup to boostrap setuptools installation.

  Added a whitelist option.  When used, only RPC methods in
  the whitelist will be accessible.  If the whitelist is
  not used or empty, all methods will be accessible.

    [rpcinterface:twiddler]
    supervisor.rpcinterface_factory = supervisor_twiddler.rpcinterface:make_twiddler_rpcinterface
    whitelist = getAPIVersion,getGroupNames

  When the whitelist is used, all methods will still appear in
  system.listMethods() but calling a method not in the whitelist
  will return fault 230 NOT_IN_WHITELIST.

0.2 (16-Feb-2008)

  Renamed addProcessToGroup() to addProgramToGroup().  The method
  now supports program definitions with numprocs > 1 and will add
  all resulting processes from the program definition.  It also
  fixes a bug where the process config was not added to the group
  properly.  Requested by Roger Hoover.

  Added new method log() that writes an arbitrary message to the
  main supervisord log.  This is useful for recording information
  about your twiddling.

0.1 (5-Nov-2007)

  First release.